# termide

./: .gitignore  Cargo.toml  README.md
crates/termide-plugin-api/: Cargo.toml
crates/termide-plugin-api/src/: input.rs  lib.rs
crates/termide-plugin-api/src/tests/: input.rs  mod.rs
src/: lib.rs  main.rs  tests.rs
src/buffer/: buffer.rs  mod.rs  position.rs  selection.rs
src/buffer/tests/: buffer.rs  mod.rs  position.rs  selection.rs
src/clipboard/: internal.rs  mod.rs  system.rs
src/clipboard/tests/: factory.rs  internal.rs  mod.rs  system.rs
src/editor/: editor_mode.rs  editor_state.rs  mod.rs
src/editor/tests/: editor_mode.rs  editor_state.rs  integration.rs  mod.rs
src/file_io/: mod.rs  read.rs  write.rs
src/file_io/tests/: integration.rs  mod.rs  read.rs  write.rs
src/input/: bindings.rs  command.rs  config.rs  direction.rs  handler.rs  input_handler.rs  keybinding.rs  mod.rs  registry.rs  watcher.rs
src/input/tests/: bindings.rs  command.rs  config.rs  default_bindings_coverage.rs  handler.rs  input_handler.rs  keybinding.rs  mod.rs  mode_transitions.rs  multikey_sequences.rs  plugin_registry.rs  registry.rs
src/ui/: mod.rs  renderer.rs  theme.rs
src/ui/tests/: mod.rs  renderer.rs  theme.rs
tests/: bindings_integration.rs  clipboard_integration.rs  config_integration.rs  hot_reload_integration.rs  integration_tests.rs  plugin_bindings_integration.rs  ui_integration.rs
