[workspace]
members = [".", "crates/termide-plugin-api"]

[package]
name = "termide"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6"
crossterm = "0.29"
ratatui = "0.29"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
termide-plugin-api = { path = "crates/termide-plugin-api" }
notify = "8.2.0"
notify-debouncer-mini = "0.7"
copypasta = "0.8"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
